[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-enterprise-mcp"
version = "1.0.0"
description = "MEOK AI Labs — Enterprise-grade Slack integration with full audit trails for compliance."
authors = [{name="MEOK AI Labs", email="nicholas@meok.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "mcp-server", "model-context-protocol", "claude", "ai-tools", "meok-ai-labs", "slack", "team-communication", "workspace-management", "slack-bot", "enterprise-messaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/slack-enterprise-mcp"
Documentation = "https://meok.ai/docs/slack-enterprise-mcp"
"Bug Tracker" = "https://github.com/CSOAI-ORG/slack-enterprise-mcp/issues"
